更新目录名称

--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -75,7 +75,7 @@
                         </div>
                         <div class="resume-project-content">
                             <div class="resume-project-img">
-                                <a href="../jsq(es6写的计算器)/index.html">
+                                <a href="../jsq/index.html">
                                     <img src=".//img/jsq-a4379ba3c9.png" alt="">
                                 </a>
                             </div>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="resume-project-content">
                             <div class="resume-project-img">
-                                <a href="../海绵宝宝CSS特效/index.html">
+                                <a href="../hmbb/index.html">
                                     <img src=".//img/hmbb-e2cb6272dd.png" alt="">
                                 </a>
                             </div>
