页面小bug更新

--- a/demo/hmbb/index.html
+++ b/demo/hmbb/index.html
@@ -24,7 +24,7 @@
         position:absolute;
     }
     .pt_center {
-        position:absolute;
+        position:fixed;
         left:0;
         right:0;
         top:0;
@@ -35,6 +35,7 @@
         width:323px;
         height:283px;
         margin:206px auto;
+        background-color:#F8EA4C;
         /* border:1px solid; */
     }
     .SpongeBob-eyes-white {
@@ -262,7 +263,7 @@
     .SpongeBob-smile-m {
         width: 100%;
         height: 160px;
-        top: 37px;
+        top: 35px;
         z-index: 1;
     }
     .SpongeBob-smile-m-l, .SpongeBob-smile-m-r {
@@ -286,7 +287,7 @@
     .SpongeBob-smile-m-m {
         width: 253px;
         height: 117px;
-        margin: 7px auto;
+        margin: 6px auto;
         position: relative;
         overflow: hidden;
     }
@@ -322,12 +323,12 @@
     .SpongeBob-smile-m-tooth-1 {
         left: 76px;
         top: 32px;
-        transform: rotate(8deg);
+        transform: rotate(4deg);
     }
     .SpongeBob-smile-m-tooth-2 {
         right: 82px;
-        top: 33px;
-        transform: rotate(-8deg);
+        top: 32px;
+        transform: rotate(-6deg);
     }
     .SpongeBob-smile-m-mouse-b {
         width: 232px;
@@ -499,8 +500,7 @@
 </style>
 <body>
          <!-- <img src="./originWall.jpg" alt="">  -->
-    <p>角：锐角、直角、钝角</p>
-     <div class="dot"></div>
+    <div class="dot"></div>
     <div class="dot"></div>
     <div class="dot"></div>
     <div class="dot"></div>
