--- a/demo/jsq/index.html
+++ b/demo/jsq/index.html
@@ -128,6 +128,7 @@
         </section>
     </section>
     <script>
+        alert("请在手机模式下进行观看使用");
         const defaultNum = 0;
         let isMoreJs = false;
         let isPointing = false;//是否为小数点状态
