更新项目链接

--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -1,2 +1,141 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Document</title><link rel="stylesheet" href=".//css/normalize-398c1eb5af.css"><link rel="stylesheet" href=".//css/style-d39e9eb73b.css"><link rel="stylesheet" href=".//css/media-5fdac83e4f.css"><link rel="stylesheet" href=".//css/animate-f8d8775950.css"></head><body><div class="resume-full-screen wrap"><div class="resume-tip" style="left: -100%">如果您使用PC端的话，只需要使用鼠标滚轮就可以继续浏览了。</div><div class="resume-alert-wrap resume-alert-wrap__active"><!-- <div class="resume-alert-bg"></div> --><div class="resume-alert-info"><div class="alert-inline-info">我的第一个项目，也是一个真实项目，项目技术涵盖了：js、div+css、ajax。由MUI框架制作的公众号网购应用。</div><div class="resume-alert-button">进入该项目</div></div></div><div class="resume-full-screen resume-page-box"><section class="resume-full-screen resume-page resume-page-frist"><!-- <div class="resume-imgAvatar" animate="bounce"></div> --><div class="circle-head-img" animate="zoomIn"><img src=".//img/avatar_15-b2ea5ed982.png" alt=""></div><div class="resume-title" animate="zoomIn"><span>I'm Perter!</span></div><p class="resume-job" animate="bounceInLeft"><span class="resume-job-inline"><!-- 我是一个前端学习者，曾就职于某特科技有限公司，负责公众号应用开发，拥有1年的项目经验，目前正在学习流行的框架，可以使用Vue、React做一些小Demo，
-                    熟悉ES6，接触过Gulp、Webpack、yeoman等自动化构建工具。本页面也是利用本人使用的yeoman脚手架生成，技术使用原生JavaScript和HTML5+CSS3。 --></span></p></section><section class="resume-full-screen resume-page resume-page-second"><div class="resume-project-wrap"><div class="resume-title resume-project-title" animate="zoomIn"><span>项目经验</span></div><div class="resume-project-contentWrap" animate="zoomIn"><div class="resume-project-content"><div class="resume-project-img"><div class="resume-minScr-href"></div><a><img src=".//img/project-1-bd805ffaaa.jpg" alt=""></a></div><div class="resume-project-description"><p class="resume-project-name">聪明惠购(微信号:cmhgsc)</p><div class="resume-project-info">我的第一个项目，也是一个真实项目，项目技术涵盖了：js、div+css、ajax。由MUI框架制作的公众号网购应用。</div></div></div><div class="resume-project-content"><div class="resume-project-img"><div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/resume"><img src=".//img/avatar-3ccff73eed.jpg" alt=""></a></div><div class="resume-project-description"><p class="resume-project-name">滚屏简历</p><div class="resume-project-info">这个是我做的第一个简历，使用wheel事件 + setTimeout以及CSS3的tranlateY、Animate.CSS制作的</div></div></div><div class="resume-project-content"><div class="resume-project-img"><div class="resume-minScr-href"></div><a href="http://git.imweb.io/xiaobingxiansheng/demo/react-blog-1"><img src=".//img/react-blog-e1e697d4e8.png" alt=""></a></div><div class="resume-project-description"><p class="resume-project-name">React制作的一个博客</p><div class="resume-project-info">这是由React搭建的博客，目前正在一边学习和完善中..</div></div></div><div class="resume-project-content"><div class="resume-project-img"><div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/jsq"><img src=".//img/jsq-9f9c653ce2.png" alt=""></a></div><div class="resume-project-description"><p class="resume-project-name">ES6计算器</p><div class="resume-project-info">一个计算器DEMO，使用了事件委托来监听每个按钮的事件</div></div></div><div class="resume-project-content"><div class="resume-project-img"><div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/music-pai/"><img src=".//img/pai-music-3f17a63b86.png" alt=""></a></div><div class="resume-project-description"><p class="resume-project-name">Pai-Music</p><div class="resume-project-info">一个音乐播放器的DEMO，使用了indexDB作为本地数据库来存储音乐路径，功能尚未完善，但已经可以播放和切歌以及调整速度，仅仅是用来学习总结indexDB。</div></div></div><div class="resume-project-content"><div class="resume-project-img"><div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/hmbb"><img src=".//img/hmbb-2b77b7db3c.png" alt=""></a></div><div class="resume-project-description"><p class="resume-project-name">用CSS制作的海绵宝宝</p><div class="resume-project-info">使用CSS+div制作的一个海绵宝宝脸部，使用border-radius制作出海绵的各个曲线。</div></div></div><div class="resume-project-content"><div class="resume-project-img"><div class="resume-minScr-href"></div><a href="http://admin.828keji.com/index.html?tdsourcetag=s_pcqq_aiomsg"><img src=".//img/project-9-98c4cbf1bf.jpg" alt=""></a></div><div class="resume-project-description"><p class="resume-project-name">有财万年历-天气预报</p><div class="resume-project-info">这也是一个部署到公网的网站，使用promise来做接口联调的需要，使用了swiper、echarts等插件，实现了七天之内的天气预测、生活指数</div></div></div></div></div></section><section class="resume-full-screen resume-page resume-page-thirty"><div class="resume-skill-wrap"><div class="resume-title resume-skill-title" animate="zoomIn"><span>技能特长</span></div><div class="resume-skill-content"><div class="resume-skill-label" animate="flash">css</div><div class="resume-skill-label" animate="flash">less</div><div class="resume-skill-label" animate="flash">javascript</div><div class="resume-skill-label" animate="flash">es6</div><div class="resume-skill-label" animate="flash">html5</div><div class="resume-skill-label" animate="flash">gulp</div><div class="resume-skill-label" animate="flash">webpack</div></div></div></section><section class="resume-full-screen resume-page resume-page-forty"><div class="resume-aboutMore-wrap"><div class="resume-title resume-aboutMore-title" animate="zoomIn"><span>了解更多</span></div><p class="resume-aboutMore-href"><a href="http://git.imweb.io/xiaobingxiansheng/react-blog-1" animate="shake"><span class="icon icon-react"></span>个人博客(正在建设当中..) </a><a href="https://github.com/xiaobingxiansheng" animate="shake"><span class="icon icon-git"></span>xiaobingxiansheng </a><a href="https://juejin.im/user/5a9101d65188257a690f82c4" animate="shake"><span class="icon icon-juejin"></span>法令男</a></p></div></section></div></div><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script><script src=".//js/index-19987e792d.js"></script><script src=".//js/animate-6e89d0d175.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href=".//css/normalize-398c1eb5af.css">
+  <link rel="stylesheet" href=".//css/style-d39e9eb73b.css">
+  <link rel="stylesheet" href=".//css/media-5fdac83e4f.css">
+  <link rel="stylesheet" href=".//css/animate-f8d8775950.css">
+</head>
+
+<body>
+  <div class="resume-full-screen wrap">
+    <div class="resume-tip" style="left: -100%">如果您使用PC端的话，只需要使用鼠标滚轮就可以继续浏览了。</div>
+    <div class="resume-alert-wrap resume-alert-wrap__active">
+      <!-- <div class="resume-alert-bg"></div> -->
+      <div class="resume-alert-info">
+        <div class="alert-inline-info">我的第一个项目，也是一个真实项目，项目技术涵盖了：js、div+css、ajax。由MUI框架制作的公众号网购应用。</div>
+        <div class="resume-alert-button">进入该项目</div>
+      </div>
+    </div>
+    <div class="resume-full-screen resume-page-box">
+      <section class="resume-full-screen resume-page resume-page-frist">
+        <!-- <div class="resume-imgAvatar" animate="bounce"></div> -->
+        <div class="circle-head-img" animate="zoomIn"><img src=".//img/avatar_15-b2ea5ed982.png" alt=""></div>
+        <div class="resume-title" animate="zoomIn"><span>I'm Perter!</span></div>
+        <p class="resume-job" animate="bounceInLeft"><span class="resume-job-inline">
+            <!-- 我是一个前端学习者，曾就职于某特科技有限公司，负责公众号应用开发，拥有1年的项目经验，目前正在学习流行的框架，可以使用Vue、React做一些小Demo，
+                    熟悉ES6，接触过Gulp、Webpack、yeoman等自动化构建工具。本页面也是利用本人使用的yeoman脚手架生成，技术使用原生JavaScript和HTML5+CSS3。 --></span></p>
+      </section>
+      <section class="resume-full-screen resume-page resume-page-second">
+        <div class="resume-project-wrap">
+          <div class="resume-title resume-project-title" animate="zoomIn"><span>项目经验</span></div>
+          <div class="resume-project-contentWrap" animate="zoomIn">
+            <div class="resume-project-content">
+              <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a><img src=".//img/project-1-bd805ffaaa.jpg" alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">聪明惠购(微信号:cmhgsc)</p>
+                <div class="resume-project-info">我的第一个项目，也是一个真实项目，项目技术涵盖了：js、div+css、ajax。由MUI框架制作的公众号网购应用。</div>
+              </div>
+            </div>
+            <div class="resume-project-content">
+              <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/resume"><img
+                    src=".//img/avatar-3ccff73eed.jpg" alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">滚屏简历</p>
+                <div class="resume-project-info">这个是我做的第一个简历，使用wheel事件 + setTimeout以及CSS3的tranlateY、Animate.CSS制作的</div>
+              </div>
+            </div>
+            <div class="resume-project-content">
+              <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a href="http://git.imweb.io/xiaobingxiansheng/demo/react-blog-1"><img
+                    src=".//img/react-blog-e1e697d4e8.png" alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">React制作的一个博客</p>
+                <div class="resume-project-info">这是由React搭建的博客，目前正在一边学习和完善中..</div>
+              </div>
+            </div>
+            <div class="resume-project-content">
+              <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/jsq"><img src=".//img/jsq-9f9c653ce2.png"
+                    alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">ES6计算器</p>
+                <div class="resume-project-info">一个计算器DEMO，使用了事件委托来监听每个按钮的事件</div>
+              </div>
+            </div>
+            <div class="resume-project-content">
+              <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/music-pai/"><img
+                    src=".//img/pai-music-3f17a63b86.png" alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">Pai-Music</p>
+                <div class="resume-project-info">一个音乐播放器的DEMO，使用了indexDB作为本地数据库来存储音乐路径，功能尚未完善，但已经可以播放和切歌以及调整速度，仅仅是用来学习总结indexDB。</div>
+              </div>
+            </div>
+            <div class="resume-project-content">
+              <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/hmbb"><img src=".//img/hmbb-2b77b7db3c.png"
+                    alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">用CSS制作的海绵宝宝</p>
+                <div class="resume-project-info">使用CSS+div制作的一个海绵宝宝脸部，使用border-radius制作出海绵的各个曲线。</div>
+              </div>
+            </div>
+            <div class="resume-project-content">
+              <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a href="https://github.com/xiaobingxiansheng/youcai-weather"><img
+                    src=".//img/project-9-98c4cbf1bf.jpg" alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">有财万年历-天气预报</p>
+                <div class="resume-project-info">这也是一个部署到公网的网站，使用promise来做接口联调的需要，使用了swiper、echarts等插件，实现了七天之内的天气预测、生活指数</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="resume-full-screen resume-page resume-page-thirty">
+        <div class="resume-skill-wrap">
+          <div class="resume-title resume-skill-title" animate="zoomIn"><span>技能特长</span></div>
+          <div class="resume-skill-content">
+            <div class="resume-skill-label" animate="flash">css</div>
+            <div class="resume-skill-label" animate="flash">less</div>
+            <div class="resume-skill-label" animate="flash">javascript</div>
+            <div class="resume-skill-label" animate="flash">es6</div>
+            <div class="resume-skill-label" animate="flash">html5</div>
+            <div class="resume-skill-label" animate="flash">gulp</div>
+            <div class="resume-skill-label" animate="flash">webpack</div>
+          </div>
+        </div>
+      </section>
+      <section class="resume-full-screen resume-page resume-page-forty">
+        <div class="resume-aboutMore-wrap">
+          <div class="resume-title resume-aboutMore-title" animate="zoomIn"><span>了解更多</span></div>
+          <p class="resume-aboutMore-href"><a href="http://git.imweb.io/xiaobingxiansheng/react-blog-1" animate="shake"><span
+                class="icon icon-react"></span>个人博客(正在建设当中..) </a><a href="https://github.com/xiaobingxiansheng"
+              animate="shake"><span class="icon icon-git"></span>xiaobingxiansheng </a><a href="https://juejin.im/user/5a9101d65188257a690f82c4"
+              animate="shake"><span class="icon icon-juejin"></span>法令男</a></p>
+        </div>
+      </section>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+    crossorigin="anonymous"></script>
+  <script src=".//js/index-19987e792d.js"></script>
+  <script src=".//js/animate-6e89d0d175.js"></script>
+</body>
+
+</html>
