--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Peter的个人简历</title>
   <link rel="stylesheet" href=".//css/normalize-398c1eb5af.css">
   <link rel="stylesheet" href=".//css/style-d39e9eb73b.css">
   <link rel="stylesheet" href=".//css/media-5fdac83e4f.css">
@@ -25,15 +25,15 @@
     <div class="resume-full-screen resume-page-box">
       <section class="resume-full-screen resume-page resume-page-frist">
         <!-- <div class="resume-imgAvatar" animate="bounce"></div> -->
-        <div class="circle-head-img" animate="zoomIn"><img src=".//img/avatar_15-b2ea5ed982.png" alt=""></div>
-        <div class="resume-title" animate="zoomIn"><span>I'm Perter!</span></div>
+        <div class="circle-head-img" animate="zoomIn"><img src="https://user-gold-cdn.xitu.io/2018/2/24/161c679ce645da73?imageView2/1/w/100/h/100/q/85/format/webp/interlace/1" alt=""></div>
+        <!-- <div class="resume-title" animate="zoomIn"><span>I'm Perter!</span></div> -->
         <p class="resume-job" animate="bounceInLeft"><span class="resume-job-inline">
             <!-- 我是一个前端学习者，曾就职于某特科技有限公司，负责公众号应用开发，拥有1年的项目经验，目前正在学习流行的框架，可以使用Vue、React做一些小Demo，
                     熟悉ES6，接触过Gulp、Webpack、yeoman等自动化构建工具。本页面也是利用本人使用的yeoman脚手架生成，技术使用原生JavaScript和HTML5+CSS3。 --></span></p>
       </section>
       <section class="resume-full-screen resume-page resume-page-second">
         <div class="resume-project-wrap">
-          <div class="resume-title resume-project-title" animate="zoomIn"><span>项目经验</span></div>
+          <div class="resume-title resume-project-title" animate="zoomIn"><span>作品栏</span></div>
           <div class="resume-project-contentWrap" animate="zoomIn">
             <div class="resume-project-content">
               <div class="resume-project-img">
@@ -41,7 +41,7 @@
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">聪明惠购(微信号:cmhgsc)</p>
-                <div class="resume-project-info">我的第一个项目，也是一个真实项目，项目技术涵盖了：js、div+css、ajax。由MUI框架制作的公众号网购应用。</div>
+                <div class="resume-project-info">我的第一个项目，也是一个真实项目，项目技术涵盖了：JavaScript、CSS-Flex、Ajax。使用混合开发的MUI框架制作的公众号网购系统，为企业输送了5K名客户</div>
               </div>
             </div>
             <div class="resume-project-content">
@@ -51,7 +51,7 @@
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">滚屏简历</p>
-                <div class="resume-project-info">这个是我做的第一个简历，使用wheel事件 + setTimeout以及CSS3的tranlateY、Animate.CSS制作的</div>
+                <div class="resume-project-info">这个是我做的第一个简历，使用了防抖的方式来进行滚屏操作，动画使用CSS3的tranlateY、Animate.CSS制作的</div>
               </div>
             </div>
             <div class="resume-project-content">
@@ -71,7 +71,7 @@
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">ES6计算器</p>
-                <div class="resume-project-info">一个计算器DEMO，使用了事件委托来监听每个按钮的事件</div>
+                <div class="resume-project-info">一个计算器DEMO，利用事件委托的方式来节约性能，同时写了一个工具方法在里面</div>
               </div>
             </div>
             <div class="resume-project-content">
@@ -81,7 +81,7 @@
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">Pai-Music</p>
-                <div class="resume-project-info">一个音乐播放器的DEMO，使用了indexDB作为本地数据库来存储音乐路径，功能尚未完善，但已经可以播放和切歌以及调整速度，仅仅是用来学习总结indexDB。</div>
+                <div class="resume-project-info">一个音乐播放器的DEMO，使用了IndexDB作为本地数据库来存储音乐路径，功能尚未完善，但已经可以播放和切歌以及调整速度，仅仅是用来学习总结IndexDB。</div>
               </div>
             </div>
             <div class="resume-project-content">
@@ -91,7 +91,7 @@
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">用CSS制作的海绵宝宝</p>
-                <div class="resume-project-info">使用CSS+div制作的一个海绵宝宝脸部，使用border-radius制作出海绵的各个曲线。</div>
+                <div class="resume-project-info">使用CSS+div制作的一个海绵宝宝脸部，使用CSS3:border-radius制作出海绵的各个曲线。</div>
               </div>
             </div>
             <div class="resume-project-content">
@@ -101,7 +101,7 @@
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">有财万年历-天气预报</p>
-                <div class="resume-project-info">这也是一个部署到公网的网站，使用promise来做接口联调的需要，使用了swiper、echarts等插件，实现了七天之内的天气预测、生活指数</div>
+                <div class="resume-project-info">一个天气程序小应用，使用Promise技术进行接口联调，使用了Swiper、Echarts等插件，实现了未来七天之内的天气预测、生活指数、地理位置切换以及生活贴士等基本功能</div>
               </div>
             </div>
           </div>
@@ -111,13 +111,12 @@
         <div class="resume-skill-wrap">
           <div class="resume-title resume-skill-title" animate="zoomIn"><span>技能特长</span></div>
           <div class="resume-skill-content">
-            <div class="resume-skill-label" animate="flash">css</div>
-            <div class="resume-skill-label" animate="flash">less</div>
-            <div class="resume-skill-label" animate="flash">javascript</div>
-            <div class="resume-skill-label" animate="flash">es6</div>
-            <div class="resume-skill-label" animate="flash">html5</div>
-            <div class="resume-skill-label" animate="flash">gulp</div>
-            <div class="resume-skill-label" animate="flash">webpack</div>
+            <div class="resume-skill-label" animate="flash">CSS</div>
+            <div class="resume-skill-label" animate="flash">LESS</div>
+            <div class="resume-skill-label" animate="flash">JavaScript</div>
+            <div class="resume-skill-label" animate="flash">ES6</div>
+            <div class="resume-skill-label" animate="flash">GULP</div>
+            <div class="resume-skill-label" animate="flash">React</div>
           </div>
         </div>
       </section>
