压缩图片和更新曲目，修改简历信息

--- a/demo/hmbb/index.html
+++ b/demo/hmbb/index.html
@@ -409,6 +409,7 @@
         position:absolute;
         border-radius:50%;
         background-color:#CAB540;
+        display: none;
         /* animation:mymove 1.2s infinite; */
     }
     @keyframes mymove
