--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -56,12 +56,12 @@
             </div>
             <div class="resume-project-content">
               <div class="resume-project-img">
-                <div class="resume-minScr-href"></div><a href="http://git.imweb.io/xiaobingxiansheng/demo/react-blog-1"><img
+                <div class="resume-minScr-href"></div><a href="https://github.com/xiaobingxiansheng/react-blog"><img
                     src=".//img/react-blog-e1e697d4e8.png" alt=""></a>
               </div>
               <div class="resume-project-description">
-                <p class="resume-project-name">React制作的一个博客</p>
-                <div class="resume-project-info">这是由React搭建的博客，目前正在一边学习和完善中..</div>
+                <p class="resume-project-name">React个人博客</p>
+                <div class="resume-project-info">这是一个利用React进行组件化搭建的博客网站，拥有表单验证，博文展示，主题色切换，支持多页面等形式，目前正在一边学习和完善中..,以后会引入redux、SSR等技术</div>
               </div>
             </div>
             <div class="resume-project-content">
@@ -123,10 +123,13 @@
       <section class="resume-full-screen resume-page resume-page-forty">
         <div class="resume-aboutMore-wrap">
           <div class="resume-title resume-aboutMore-title" animate="zoomIn"><span>了解更多</span></div>
-          <p class="resume-aboutMore-href"><a href="http://git.imweb.io/xiaobingxiansheng/react-blog-1" animate="shake"><span
+          <p class="resume-aboutMore-href"><a href="https://xiaobingxiansheng.github.io/demo/blog" animate="shake"><span
                 class="icon icon-react"></span>个人博客(正在建设当中..) </a><a href="https://github.com/xiaobingxiansheng"
               animate="shake"><span class="icon icon-git"></span>xiaobingxiansheng </a><a href="https://juejin.im/user/5a9101d65188257a690f82c4"
               animate="shake"><span class="icon icon-juejin"></span>法令男</a></p>
+          <p animate="shake">
+            <a href="mailto:2609575549@qq.com">联系邮箱: 2609575549@qq.com
+          </p>
         </div>
       </section>
     </div>
