添加一个3D骰子项目

--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -96,6 +96,16 @@
             </div>
             <div class="resume-project-content">
               <div class="resume-project-img">
+                <div class="resume-minScr-href"></div><a href="https://codepen.io/xiaobingxiansheng/pen/VBBVNB"><img src=".//img/project-2.png"
+                    alt=""></a>
+              </div>
+              <div class="resume-project-description">
+                <p class="resume-project-name">用利用CSS制作的3D摇骰子</p>
+                <div class="resume-project-info">利用CSS3相关的transform+flex的方式进行制作，一个能够3D旋转的骰子</div>
+              </div>
+            </div>
+            <div class="resume-project-content">
+              <div class="resume-project-img">
                 <div class="resume-minScr-href"></div><a href="https://github.com/xiaobingxiansheng/youcai-weather"><img
                     src=".//img/project-9-98c4cbf1bf.jpg" alt=""></a>
               </div>
