--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -125,7 +125,7 @@
             <div class="resume-skill-label" animate="flash">LESS</div>
             <div class="resume-skill-label" animate="flash">JavaScript</div>
             <div class="resume-skill-label" animate="flash">ES6</div>
-            <div class="resume-skill-label" animate="flash">GULP</div>
+            <div class="resume-skill-label" animate="flash">GLUP</div>
             <div class="resume-skill-label" animate="flash">React</div>
           </div>
         </div>
