更新图片资源 样式修正

--- a/demo/resume/index.html
+++ b/demo/resume/index.html
@@ -47,7 +47,7 @@
             <div class="resume-project-content">
               <div class="resume-project-img">
                 <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/resume"><img
-                    src=".//img/avatar-3ccff73eed.jpg" alt=""></a>
+                    src=".//img/resume.png" alt=""></a>
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">滚屏简历</p>
@@ -57,7 +57,7 @@
             <div class="resume-project-content">
               <div class="resume-project-img">
                 <div class="resume-minScr-href"></div><a href="https://github.com/xiaobingxiansheng/react-blog"><img
-                    src=".//img/react-blog-e1e697d4e8.png" alt=""></a>
+                    src=".//img/blog.png" alt=""></a>
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">React个人博客</p>
@@ -66,7 +66,7 @@
             </div>
             <div class="resume-project-content">
               <div class="resume-project-img">
-                <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/jsq"><img src=".//img/jsq-9f9c653ce2.png"
+                <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/jsq"><img src=".//img/jsq.png"
                     alt=""></a>
               </div>
               <div class="resume-project-description">
@@ -77,7 +77,7 @@
             <div class="resume-project-content">
               <div class="resume-project-img">
                 <div class="resume-minScr-href"></div><a href="https://xiaobingxiansheng.github.io/demo/music-pai/"><img
-                    src=".//img/pai-music-3f17a63b86.png" alt=""></a>
+                    src=".//img/music.png" alt=""></a>
               </div>
               <div class="resume-project-description">
                 <p class="resume-project-name">Pai-Music</p>
@@ -96,7 +96,7 @@
             </div>
             <div class="resume-project-content">
               <div class="resume-project-img">
-                <div class="resume-minScr-href"></div><a href="https://codepen.io/xiaobingxiansheng/pen/VBBVNB"><img src=".//img/project-2.png"
+                <div class="resume-minScr-href"></div><a href="https://codepen.io/xiaobingxiansheng/pen/VBBVNB"><img src=".//img/touzi.png"
                     alt=""></a>
               </div>
               <div class="resume-project-description">
